force-app/main/default/objects/Building_Project_Team__c/Building_Project_Team__c.object-meta.xml
<CustomObject>
    <label>Building Project Team</label>
    <nameField>
        <displayFormat>BPT-{0000000000}</displayFormat>
        <label>Building Project Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>