force-app/main/default/objects/Building_Project_Team__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Building Project Team</relationshipLabel>
    <relationshipName>BuildingProjectTeams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>