force-app/main/default/objects/Building_Project_Team__c/fields/Orders_on_Building_Project__c.field-meta.xml
<CustomField>
    <fullName>Orders_on_Building_Project__c</fullName>
    <description>Is filled by an Apex Trigger, that counts the amount of Order records assigned to the related Building Project</description>
    <inlineHelpText>Is filled by an Apex Trigger, that counts the amount of Order records assigned to the related Building Project</inlineHelpText>
    <label>Orders on Building Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>