force-app/main/default/objects/Building_Project_Team__c/fields/ReportUser__c.field-meta.xml
<CustomField>
    <fullName>ReportUser__c</fullName>
    <formula>IF( User__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>